crates/analyzer/tests/snapshots/errors__call_undefined_function_on_contract.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: no function named `doesnt_exist` exists in this contract
  ┌─ [snippet]:3:3
  │
3 │   self.doesnt_exist()
  │   ^^^^^^^^^^^^^^^^^ undefined function


